Implemented /v2/users GET and POST
